--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@ document.getElementById("download").addEventListener("click", async () => {
 
   // !!! ЗДЕСЬ ИЗМЕНЕНИЕ !!!
   // Указываем полный адрес сервера Python (порт 5000)
-  const response = await fetch("http://127.0.0.1:5000/generate", {
+  const response = await fetch("https://moneytt.online/api/generate", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify(payload)
@@ -610,4 +610,5 @@ document.getElementById("download").addEventListener("click", async () => {
 </body>
 
 </html>
+
 
