--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ document.getElementById("download").addEventListener("click", () => {
     // Создаем форму динамически
     const form = document.createElement("form");
     form.method = "POST";
-    form.action = "http://127.0.0.1:5000/api/generate";
+    form.action = "https://moneytt.online/api/generate";
     form.target = "_blank"; // откроется в новом окне/вкладке и сразу скачает
 
     const payload = {
@@ -603,6 +603,7 @@ document.getElementById("download").addEventListener("click", () => {
 </body>
 
 </html>
+
 
 
 
